--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<script src="https://cdn.tailwindcss.com"></script>
+	<link rel="stylesheet" href="./css/style_tg.css">
 </head>
 
 <body>
@@ -467,7 +468,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="h-[56px] flex items-center justify-around w-full bg-white fixed bottom-0 left-0">
+		<footer class="h-[56px] flex items-center justify-around w-full  fixed bottom-0 left-0 tg-footer-bg">
 			<div class="w-7 h-[39px] flex flex-col items-center justify-center text-center">
 				<a href="" class="text-[#000000] text-[10px] leading-[11.93px]"><i
 						class='bx bxs-home bx-sm'></i>Home</a>
@@ -490,6 +491,8 @@
 			</div>
 		</footer>
 	</div>
+	<script src="https://telegram.org/js/telegram-web-app.js"></script>
+
 </body>
 
 </html>
